--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "2014-10-07                    59.993735               52.005864   193.26  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,8 +248,7 @@
     "# Import the data by reading in the CSV file and setting the DatetimeIndex \n",
     "# Review the first 5 rows of the DataFrame\n",
     "# YOUR CODE HERE\n",
-    "csvpath=Path(r\"C:\\\\Users\\\\kranthi.mitta\\\\Desktop\\\\github_stuff\\\\Module4_Challenge\\\\Resources\\\\whale_navs.csv\")\n",
-    "whale_df=pd.read_csv(csvpath, index_col=\"date\",parse_dates=True, infer_datetime_format=True)\n",
+    "csvpath = pd.read_csv(Path(\"./Resources/whale_navs.csv\"), index_col=\"date\",parse_dates=True, infer_datetime_format=True)\n",
     "whale_df.head()"
    ]
   },
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +363,7 @@
        "2014-10-08                     0.000242                0.000842  0.017489  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +420,7 @@
        "<AxesSubplot:title={'center':'Daily Returns of Funds'}, xlabel='date'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +555,7 @@
        "2020-09-11                     1.055081                1.236625  1.718858  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +586,7 @@
        "<AxesSubplot:title={'center':'Cumulative Returns of Funds'}, xlabel='date'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -645,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +653,7 @@
        "<AxesSubplot:title={'center':'Daily Returns of Portfolios & SP500'}>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -687,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +838,7 @@
        "[1498 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1006,7 @@
        "[1497 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1027,7 @@
        "<AxesSubplot:title={'center':'Daily Returns of Portfolios'}>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1090,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1103,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1148,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1179,7 @@
        "<AxesSubplot:title={'center':'Daily Returns-21 Day Rolling Window'}, xlabel='date'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1214,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1222,7 @@
        "<AxesSubplot:title={'center':'Daily Returns Standard Deviation-21 Day Rolling Window'}, xlabel='date'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1312,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1325,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1355,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1388,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1419,7 @@
        "<AxesSubplot:title={'center':'Sharpe Ratios'}>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1485,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1499,7 @@
        "Name: S&P 500, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1550,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1587,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1610,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1624,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1654,7 @@
        "<AxesSubplot:title={'center':'Rolling Beta for portfolio 1'}, xlabel='date'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1688,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1702,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1739,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1776,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1806,7 @@
        "<AxesSubplot:title={'center':'Rolling Beta for portfolio 2'}, xlabel='date'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
