--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -1856,7 +1856,7 @@
    "source": [
     "**Question 2** Which of the two portfolios do you recommend for inclusion in your firm’s suite of fund offerings?\n",
     "    \n",
-    "**Answer 2** # TIGER GLOBAL MANAGEMENT LLC  and SOROS FUND GLOBAL MANAGMENT are more good options to be incluted for suite of fund offerings as their risk-return profile is higher."
+    "**Answer 2** # TIGER GLOBAL MANAGEMENT LLC  and SOROS FUND GLOBAL MANAGMENT are more good options to be included for suite of fund offerings as their risk-return profile is higher."
    ]
   },
   {
